--- a/style.css
+++ b/style.css
@@ -1287,6 +1287,132 @@ noscript{
 /* projects ends */
 
 
+/* education begins */
+
+
+.education-section-container{
+    margin: 150px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.education-section-div{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.education-heading{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.education-heading-article{
+    font-size:3rem;
+    font-family: fira code;
+    font-weight: 500;
+    background-image: -webkit-gradient(linear,left top,right top,from(#b0f3f1),to(#ffcfdf));
+    background-image: -webkit-linear-gradient(left,#b0f3f1,#ffcfdf);
+    background-image: linear-gradient(90deg,#b0f3f1,#ffcfdf);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.educationHeadingP{
+    width: 300px;
+    height: 1px;
+    background-image: -webkit-gradient(linear,left top,right top,from(#b0f3f1),to(#ffcfdf));
+    background-image: -webkit-linear-gradient(left,#b0f3f1,#ffcfdf);
+    background-image: linear-gradient(90deg,#b0f3f1,#ffcfdf);
+}
+.education-boxes-div{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    padding: 50px;
+}
+.education-boxes-div a{
+    text-decoration: none;
+    width: 100%;
+}
+.education-box{
+    background-color: rgba(255, 255, 255, 0.005);
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    transition-duration: .3s;
+    /* cursor: url('click.png');
+    cursor: url('click.png'),
+    url('click.png');
+    cursor: url('click.png'),
+    move;
+        cursor: url('click.png')10 12; */
+    position: relative;
+    box-shadow: 0px 10px 20px var(--color-shadowDark);
+}
+.language-gradient-class{
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.113);
+}
+.education-box:after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradientforlanguage 5s ease infinite;
+    top: 0;
+    left: 0;
+}
+.info-div{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+    padding: 0 40px;
+}
+
+.image-div{
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    padding-top: 70px;
+    padding-left: 10px;
+}
+.image-div img{
+    height: 100%;
+    /* border-top-left-radius:10px ; */
+   
+}
+.educationHeading{
+    color: var(--color-white);
+    font-size: 3.4rem;
+    font-weight: 700;
+}
+.educationDescription{
+    color: gray;
+    font-size: 1.7rem;
+    font-weight: 400;
+}
+
+.education-box:hover{
+    transform: translate(-5px,-10px);
+    transition-duration: .3s;
+}
+
+/* education ends */
 
 
 /* for light mode  */
